syntax = "proto3";

package brewery_pb;

import "google/api/annotations.proto";

service BreweryService {
    rpc AutoCompleteRequest(Empty) returns (AutoCompleteData) {
        option (google.api.http) = {
            get: "/v1/brewery/ac",
        };
    };

    rpc MemberService(MemberRequest) returns (MemberResponse) {
        option (google.api.http) = {
            post: "/v1/brewery/member",
            body: "*",
        };
    };

    rpc MemberByID(MemberID) returns (Member) {
        option (google.api.http) = {
            get: "/v1/brewery/member/id/{MemberID}",
        };
    };

    rpc MemberByNumber(Membernumber) returns (Member) {
        option (google.api.http) = {
            get: "/v1/brewery/member/{Membernumber}",
        };
    };

    rpc MembershipsByID(MemberID) returns (Memberships) {
        option (google.api.http) = {
            get: "/v1/brewery/memberships/{MemberID}",
        };
    };

    rpc TransactionsByID(MembershipID) returns (Transactions) {
        option (google.api.http) = {
            get: "/v1/brewery/membership/{MembershipID}/transactions",
        };
    };

    rpc StoreTransaction(TransactionRequest) returns (TransactionResponse) {
        option (google.api.http) = {
            post: "/v1/brewery/transaction/{MembershipID}",
            body: "*",
        };
    };
}

enum Action {
    QRY = 0;
    ADD = 1;
    DEL = 2;
    UPD = 3;
} 

enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILURE = 2;
}

message Empty {}

message AutoCompleteData {
    repeated AutoComplete Data = 1;
}

message AutoComplete {
    int32 Membernumber = 1;
    int32 MembershipID = 2;
    string AutoComplete = 3;
}

message Contact {
    string zip = 1;
    string city = 2;
    string email = 3;
    string phone = 4;
    string state = 5;
    string street = 6;
}

message MembershipID {
    int32 MembershipID = 1;
}

message MemberID {
    string MemberID = 1;
}

message Membernumber {
    int32 Membernumber = 1;
}

message Transaction {
    string Timestamp = 1;
    double RawUnits = 2;
}

message Transactions {
    repeated Transaction Transactions = 1;
}

message TransactionRequest {
    Action Action = 1;
    int32 MembershipID = 2;
    Transaction Transaction = 3;
}

message TransactionResponse {
    Status Status = 1;
    Transaction Transaction = 3;
}

message CurrentTransaction {
    string Timestamp = 1;
    double RawUnits = 2;
    string Id = 3;
    int32 MemstatId = 4;
}

message MembershipLevel {
    string Name = 1;
    string UnitType = 2;
    double Units = 3;
    double Base = 4;
}

message Membership {
    int32 MembershipID = 1;
    string Type = 2;
    string StartDate = 3;
    double TotalRawUnits = 4;
    int32 UnitBase = 5;
    bool Active = 6;
    repeated Transaction Transactions = 7;
}

message Memberships {
    repeated Membership memberships = 1;
}

message MemberRequest {
    Action Action = 1;
    MemberData MemberData = 2;
}

message MemberResponse {
    Status Status = 1;
    repeated AutoComplete AutoComplete = 2;
    Member Member = 3;
}
message MemberData {
    Member member = 1;
    Action Action = 2;
}

message Name {
    string First = 1;
    string Last = 2;
}

message Member {
    string Id = 1;
    int32 Membernumber = 2;
    repeated Name Names = 3;
    Contact Contact = 4;
    repeated Membership Memberships = 5;
}